---
config:
    class:
        hideEmptyMembersBox: true
---
classDiagram
    direction TD

    class Runner:::view {
        <<trait>>
        +run(&mut self) Result~void, UiError~
    }

    class Updateable:::controller {
        <<trait>>
        +type Msg
        +type Cmd
        +update(&mut self, msg: Msg) Vec~Cmd~
    }

    class EffectHandler:::effect {
        <<trait>>
        +execute(&mut self, cmd: Cmd) Vec~Msg~
    }

    class Runtime~E~:::controller {
        -core: AppCore
        -effects: E
        +new(core: AppCore, effects: E)
        +dispatch(&mut self, msg: Msg)
        +core() &AppCore
        +core_mut() &mut AppCore
        +effects() &E
        +effects_mut() &mut E
        +split_mut() (&mut AppCore, &mut E)
    }

    class AppCore:::model {
        -pomodoro: Pomodoro
        -timer_model: TimerModel
        -settings_model: SettingsModel
        -config: Config
        -router: Router
        -active_session_id: Option~i32~
        -config_snapshot: Option~Config~
        +new(pomo, config)
        +update(&mut self, msg: Msg) Vec~Cmd~
        +router() &Router
        +pomodoro() &Pomodoro
        +timer_model() &TimerModel
        +settings_model() &SettingsModel
        +settings_model_mut() &mut SettingsModel
        +config() &Config
    }

    class Msg:::action {
        <<enumeration>>
        Pomodoro(PomodoroMsg)
        Timer(TimerMsg)
        Settings(SettingsMsg)
        Tick
        Quit
        SessionCreated(i32)
        SessionUpdated
        SessionEnded
        SessionsClosed
        ConfigSaved(ConfigSaveResult)
        NotificationSent(Result)
    }

    class Cmd:::action {
        <<enumeration>>
        PlaySound(Alarm)
        StopSound
        SendNotification(Mode)
        NewSession(Option~i32~, PomodoroState)
        UpdateSession(i32)
        EndSession(i32)
        CloseAllSessions
        SaveConfig(Box~Config~)
        RunHook(String)
        ShowToast(String, ToastType)
        None
    }

    Runtime *-- AppCore
    Runtime *-- EffectHandler
    AppCore ..> Msg : receives
    AppCore ..> Cmd : produces
    EffectHandler ..> Cmd : receives
    EffectHandler ..> Msg : produces

    class Page:::action {
        <<enumeration>>
        Timer
        Settings
    }

    class Navigation:::action {
        <<enumeration>>
        GoTo(Page)
        Stay
        Quit
    }

    class Router:::controller {
        -active_page: Option~Page~
        +new(page: Page)
        +navigate(nav: Navigation)
        +quit()
        +active_page() Option~Page~
        +is_quit() bool
    }

    namespace PomodoroUpdate {
        class PomodoroMsg:::action {
            <<enumeration>>
            Add(Duration)
            Subtract(Duration)
            TogglePause
            SkipSession
            ResetSession
            Tick
            NextSession
            Start
            StartPaused
        }

        class PomodoroCmd:::action {
            <<enumeration>>
            Started
            StartedPaused
            SessionEnd
            NextSession
            SessionPaused
            SessionResumed
            SessionSkipped
        }
    }

    namespace ConfigUpdate {
        class ConfigMsg:::action {
            <<enumeration>>
            TimerFocus(Duration)
            TimerShort(Duration)
            TimerLong(Duration)
            TimerLongInterval(u32)
            TimerAutoFocus
            TimerAutoShort
            TimerAutoLong
            HookFocus(String)
            HookShort(String)
            HookLong(String)
            AlarmPathFocus(Option~PathBuf~)
            AlarmPathShort(Option~PathBuf~)
            AlarmPathLong(Option~PathBuf~)
            AlarmVolumeFocus(Percentage)
            AlarmVolumeShort(Percentage)
            AlarmVolumeLong(Percentage)
        }

        class ConfigCmd:::action {
            <<enumeration>>
            None
        }
    }

    namespace Model {
        class Pomodoro:::model {
            -focus: Duration
            -long_break: Duration
            -short_break: Duration
            -long_interval: u32
            -total_sessions: u32
            -focus_sessions: u32
            -accumulated: Duration
            -running: bool
            -mode: Mode
            -anchor: Option~Instant~
            -frozen_remaining: Duration
            +new(focus, long, short, interval)
            +start() Result~void, PomodoroError~
            +add(Duration)
            +subtract(Duration)
            +pause() Result~void, PomodoroError~
            +resume() Result~void, PomodoroError~
            +toggle_pause()
            +skip()
            +reset()
            +mode() Mode
            +is_running() bool
            +focus_sessions() u32
            +total_sessions() u32
            +started_at() Option~Instant~
            +remaining_time() Duration
            +total_time() Duration
            +session_duration() Duration
            +progress() f64
            +next_mode() Mode
        }

        class Mode:::state {
            <<enumeration>>
            Focus
            ShortBreak
            LongBreak
        }

        class Config:::model {
            +pomodoro: PomodoroConfig
            +logs_path: PathBuf
            +load() Result~Config, ConfigError~
            +save() Result~void, ConfigError~
        }

        class PomodoroConfig:::model {
            +timer: Timers
            +hook: Hooks
            +alarm: Alarms
        }

        class Timers:::model {
            +focus: Duration
            +short: Duration
            +long: Duration
            +long_interval: u32
            +auto_focus: bool
            +auto_short: bool
            +auto_long: bool
        }

        class Hooks:::model {
            +focus: String
            +short: String
            +long: String
        }

        class Alarms:::model {
            +focus: Alarm
            +short: Alarm
            +long: Alarm
        }

        class Alarm:::model {
            +path: Option~PathBuf~
            +volume: Percentage
        }

        class Percentage:::model {
            +new(perc: f32)
            +set(perc: f32)
            +set_clamp(perc: f32)
            +muted() Percentage
            +half() Percentage
            +full() Percentage
            +volume() f32
        }
    }

    class UiError:::error {
        +TuiError(TuiError)
    }

    class TuiError:::error {
        +Io(io::Error)
        +InitializeError(String)
    }

    Pomodoro ..|> Updateable : implements
    Config ..|> Updateable : implements

    Pomodoro ..> PomodoroMsg : receives
    Pomodoro ..> PomodoroCmd : produces
    Config ..> ConfigMsg : receives
    Config ..> ConfigCmd : produces

    AppCore *-- Pomodoro
    AppCore *-- Config
    AppCore *-- Router

    Router --> Page : active_page
    Router --> Navigation : handles

    Pomodoro ..> Mode : state
    Config ..> PomodoroConfig
    PomodoroConfig ..> Timers
    PomodoroConfig ..> Hooks
    PomodoroConfig ..> Alarms
    Alarms ..> Alarm
    UiError ..> TuiError

    classDef view fill:#c8e6c9,stroke:#2e7d32,stroke-width:2px,color:#000
    classDef controller fill:#bbdefb,stroke:#1565c0,stroke-width:2px,color:#000
    classDef state fill:#fff9c4,stroke:#fbc02d,stroke-width:2px,color:#000
    classDef renderCmd fill:#ffccbc,stroke:#d84315,stroke-width:2px,color:#000
    classDef effect fill:#ffccbc,stroke:#d84315,stroke-width:2px,color:#000
    classDef model fill:#e1bee7,stroke:#6a1b9a,stroke-width:2px,color:#000
    classDef action fill:#cfd8dc,stroke:#455a64,stroke-width:2px,color:#000
    classDef error fill:#ffcdd2,stroke:#c62828,stroke-width:2px,color:#000
